[gd_scene load_steps=18 format=3 uid="uid://d58vtcppf45o"]

[ext_resource type="Script" path="res://scripts/oscillating_fan.gd" id="1_7jm04"]
[ext_resource type="Texture2D" uid="uid://vvfb1rtq7kbx" path="res://Art/sierrassets furniture pack/furniture/furniture pack coloured outline.png" id="2_lhljo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iljyy"]
atlas = ExtResource("2_lhljo")
region = Rect2(493, 154, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_twbt1"]
atlas = ExtResource("2_lhljo")
region = Rect2(510, 154, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86ysy"]
atlas = ExtResource("2_lhljo")
region = Rect2(527, 154, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbnwd"]
atlas = ExtResource("2_lhljo")
region = Rect2(544, 154, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej2c2"]
atlas = ExtResource("2_lhljo")
region = Rect2(561, 154, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xd7yr"]
atlas = ExtResource("2_lhljo")
region = Rect2(578, 154, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86frf"]
atlas = ExtResource("2_lhljo")
region = Rect2(595, 154, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5ad0"]
atlas = ExtResource("2_lhljo")
region = Rect2(612, 154, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tum6"]
atlas = ExtResource("2_lhljo")
region = Rect2(561, 154, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3sej"]
atlas = ExtResource("2_lhljo")
region = Rect2(578, 154, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u7r1"]
atlas = ExtResource("2_lhljo")
region = Rect2(595, 154, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pihxv"]
atlas = ExtResource("2_lhljo")
region = Rect2(612, 154, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yks03"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iljyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twbt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86ysy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbnwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej2c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd7yr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86frf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5ad0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0tum6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3sej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u7r1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pihxv")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v8qtb"]
radius = 37.0135

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pfl85"]
size = Vector2(11, 6)

[node name="oscillating_fan" type="CharacterBody2D"]
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_7jm04")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yks03")
animation = &"side_walk"
frame_progress = 0.612123
offset = Vector2(0, -14)

[node name="detection_area" type="Area2D" parent="."]
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_v8qtb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -1)
shape = SubResource("RectangleShape2D_pfl85")

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
path_postprocessing = 1
avoidance_enabled = true
radius = 15.0
debug_enabled = true

[node name="Timer" type="Timer" parent="Navigation"]
wait_time = 0.1
autostart = true

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="velocity_computed" from="Navigation/NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
